Issue #13 - Update size and alignment for login and register pages

--- a/www/common.css
+++ b/www/common.css
@@ -401,7 +401,7 @@ select, input[type="submit"] {
 }
 
 #EnterButton, #ConnectButton, #RegisterButton, #ResetPasswordButton {
-  	width: 150px;
+  	width: 270px;
   	background-color: #ff9900;
 }
 #EnterButton:hover, #ConnectButton:hover, #RegisterButton:hover, #ResetPasswordButton:hover {
